--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.6.4",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -29,6 +30,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.279.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "prettier": "^3.0.3",
